exercise2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - assignments.idokrn.jeeng.com
      secretName: jeeng-assignments-tls
  rules:
    - host: assignments.idokrn.jeeng.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-service
                port:
                  number: 80
